--- a/livechat.html
+++ b/livechat.html
@@ -677,7 +677,7 @@
         
         function connectToServer() {
             // Connect to WebSocket server
-            socket = io('https://marzzlivechat-production.up.railway.app', {
+            socket = io('https://marzzfrontendchat.vercel.app', {
     path: '/socket.io/',
     transports: ['websocket', 'polling'],
     reconnection: true,
